--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         // --- KONFIGURASI PENTING ---
         // GANTIKAN ini dengan URL Cloudflare Worker anda.
         // CONTOH: "https://nama-worker-anda.workers.dev"
-        const WORKER_API_URL = "https://slebew.s231291233.workers.dev/"; // <-- UBAH INI!
+        const WORKER_API_URL = "https://unimap.s231291233.workers.dev"; // <-- UBAH INI!
         const FETCH_INTERVAL = 5000; // Kemas kini setiap 5 saat (5000 milisaat)
         
         // Koordinat lalai (Pusat UniMAP atau kawasan operasi bas)
