--- a/index.html
+++ b/index.html
@@ -122,10 +122,17 @@
                     // Format masa
                     if (timestamp) {
                         const date = new Date(timestamp);
-                        document.getElementById('time-data-display').textContent = date.toLocaleTimeString('ms-MY', {
-                            year: 'numeric', month: 'numeric', day: 'numeric', 
-                            hour: '2-digit', minute: '2-digit', second: '2-digit'
-                        });
+const opsiMasa = {
+    timeZone: 'Asia/Kuala_Lumpur',
+    year: 'numeric',
+    month: '2-digit',
+    day: '2-digit',
+    hour: '2-digit',
+    minute: '2-digit',
+    second: '2-digit',
+    hour12: false
+};
+document.getElementById('time-data-display').textContent = date.toLocaleString('ms-MY', opsiMasa);
                     }
 
                 } else {
@@ -154,4 +161,5 @@
         
     </script>
 </body>
+
 </html>
